--- a/css/materias.css
+++ b/css/materias.css
@@ -17,17 +17,20 @@ body {
     background: var(--cor2);
     padding-bottom: 90px;
     background-color: #f2f2f2;
-    margin-left: 90px;
-    margin-right: 90px;
+    margin-top: 50px;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
+.content{
+    margin-left: 22%;
+    margin-right: 22%;
+}
+
 .dashboard {
     color: #333;
-    padding: 24px;
     border-radius: 0 0 32px 32px;
 }
 
@@ -38,42 +41,53 @@ html {
 }
 
 .user {
-    display: flex;
+    display: block;
     gap: 1px;
     align-items: center;
 }
 
+.back{
+    display: flex;
+    background-color: #bebebe77;
+    width: 110px;
+    height: 43px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    transform: translateY(-50% -50%) ease;
+    transition-duration: .5s;
+    cursor: pointer;
+}
+
+.back:hover{
+    background-color: #41645ace;
+    color: #f2f2f2;
+}
+
+
+.arrow{
+    font-weight: bolder;
+    font-size: 20px;
+    
+}
+
+.back-tittle{
+    margin-left: 5px;
+    margin-top: -7px;
+}
+
 .user-text h1 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 100px;
     padding-top: 30px;
     font-weight: 800;
     font-size: 40px;
     letter-spacing: -0.1em;
 }
 
-.notify {
-    background: #f2f2f2;
-    border: none;
-    filter: drop-shadow(gray 0px 1px 1px);
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    color: #fff;
-    cursor: pointer;
-    transform: translateX(-50% -50%);   
-    margin-right: 125px;
-}
-
-.progress {
-    margin-top: 20px;
-}
-
 .progress h3 {
     margin-bottom: 16px;
     color: gray;
     font-weight: 400;
-    margin-left: 100px;
 }
 
 .progress-cards {
@@ -117,58 +131,20 @@ html {
 }
 
 .content h3 {
-    margin-top: 40px;
+    margin-top: 10px;
     margin-bottom: 40px;
-    margin-left: 100px;
     color: #333;
-}
-
-.simulado{
-    border-left: 5px solid var(--cor1);
-}
-
-.concluido{
-    border-left: 5px solid var(--cor4);
-}
-
-.aproveitamento{
-    border-left: 5px solid var(--cor5);
-}
-
-progress{
-    width: 100%;
-    height: 8px;
-    margin-top: 5px;
-    appearance: none;
-    -webkit-appearance: none;
-}
-
-progress::-webkit-progress-bar{
-    background-color: #41645a;
-    border-radius: 10px;
-}
-
-progress::-webkit-progress-value{
-    background-color: #41645a;
-    border-radius: 10px;
-}
-
-progress::-moz-progress-bar{
-    background-color: #41645a;
-    border-radius: 10px;
 }
 
 /* Main Content */
 .main-content {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 30px 20px 20px;
 }
 
 .section-title {
     font-size: 22px;
     color: #333;
-    margin-bottom: 20px;
     font-weight: 600;
 }
 
@@ -181,7 +157,7 @@ progress::-moz-progress-bar{
 
 .access-card {
     background: var(--cor1);
-    padding: 30px 25px;
+    padding: 15px 25px;
     border-radius: 20px;
     text-decoration: none;
     color: white;
@@ -189,7 +165,7 @@ progress::-moz-progress-bar{
     box-shadow: 0px 0px .3px .5px #c7c6c6;
     border: 2px solid transparent;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 8px;
     min-height: 140px;
 }
@@ -197,6 +173,17 @@ progress::-moz-progress-bar{
 .access-card:hover {
     transform: translate(-2px, -2px);
     box-shadow: 6px 6px 0px 0px #333;
+}
+
+.mini-arrow{
+    flex-direction: row-reverse;
+    padding-left:50px;
+    padding-top: 10px;
+    justify-content: end;
+    align-items: end;
+    flex-direction: row-reverse;
+    flex-wrap: wrap-reverse;
+    color: #33333380;
 }
 
 .card-icon {
@@ -207,93 +194,13 @@ progress::-moz-progress-bar{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 5px;
     color: #333;
 }
-
-.sim {
-    width: 45px;
-    height: 45px;
-    background: #41645ad3;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.vid {
-    width: 45px;
-    height: 45px;
-    background: #a19f8a83;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.blo {
-    width: 45px;
-    height: 45px;
-    background: #d4b07981;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.mat {
-    width: 45px;
-    height: 45px;
-    background: #eeebcd;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.dic {
-    width: 45px;
-    height: 45px;
-    background: #3333334b;
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.pro {
-    width: 45px;
-    height: 45px;
-    background: rgba(7, 109, 7, 0.247);
-    border-radius: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-    color: #333;
-}
-
 .access-card h4 {
     font-size: 18px;
+    padding-top: 10px;
     font-weight: 700;
-    margin-bottom: 2px;
     color: #333;
-}
-
-.access-card p {
-    color: #333;
-    font-size: 13px;
-    opacity: 0.9;
 }
 
 /* Cores dos Cards */
