--- a/css/materias.css
+++ b/css/materias.css
@@ -40,10 +40,21 @@ html {
     align-items: center;
 }
 
-.user {
-    display: block;
-    gap: 1px;
+.back-href{
+    text-decoration: none;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    color: #333;
+    transform: translateY(-50%, -50%) ease;
+}
+
+.back-href a{
+    transform: translateY(-50%, -50%) ease;
+}
+
+.back-href:hover{
+ color: #fff;
 }
 
 .back{
@@ -62,13 +73,6 @@ html {
 .back:hover{
     background-color: #41645ace;
     color: #f2f2f2;
-}
-
-
-.arrow{
-    font-weight: bolder;
-    font-size: 20px;
-    
 }
 
 .back-tittle{
@@ -156,11 +160,14 @@ html {
 }
 
 .access-card {
-    background: var(--cor1);
+    background: #f2f2f2;
+    color: #333;
+    font-size: 18px;
+    padding-top: 10px;
+    font-weight: 700;
     padding: 15px 25px;
     border-radius: 20px;
     text-decoration: none;
-    color: white;
     transition: all 0.3s ease;
     box-shadow: 0px 0px .3px .5px #c7c6c6;
     border: 2px solid transparent;
@@ -173,6 +180,12 @@ html {
 .access-card:hover {
     transform: translate(-2px, -2px);
     box-shadow: 6px 6px 0px 0px #333;
+    background: linear-gradient(135deg, var(--cor1) 0%, #497e6f 50%);
+    color: #fff;
+}
+
+.access-card h4{
+    padding-top: 10px;
 }
 
 .mini-arrow{
@@ -186,46 +199,37 @@ html {
     color: #33333380;
 }
 
+.guide{
+    flex-direction: row-reverse;
+    padding-left:50px;
+    padding-top: 10px;
+    justify-content: end;
+    align-items: end;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .card-icon {
     width: 45px;
     height: 45px;
-    background: rgba(83, 81, 81, 0.062);
     border-radius: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #333;
 }
-.access-card h4 {
-    font-size: 18px;
-    padding-top: 10px;
-    font-weight: 700;
-    color: #333;
+
+.access-card > .card-icon:hover{
+    background: rgba(255, 255, 255, 0.178);
 }
 
 /* Cores dos Cards */
-.card-pink {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
+/*.card-pink {
+    background: linear-gradient(135deg, #f2f2f2 0%, #ececec 100%);
 }
 
-.card-blue {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
-}
-
-.card-purple {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
-}
-
-.card-blue-alt {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
-}
-
-.card-orange {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
-}
-
-.card-green {
-    background: linear-gradient(135deg, #f2f2f2 0%, #f2f2f2 100%);
+.card-pink:hover{
+    background: linear-gradient(135deg, #62867c 0%, #66b9a2 100%);
+    
 }
 
 /* Bottom Navigation */
