--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,11 @@ html{
     scroll-behavior: smooth;
 }
 
+.center{
+    margin-left: 18%;
+    margin-right: 18%;
+}
+
 .dashboard {
     color: #333;
     padding: 24px;
@@ -45,7 +50,6 @@ html{
 
 .user-text h1 {
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 100px;
     padding-top: 30px;
     font-weight: 800;
     font-size: 40px;
@@ -62,7 +66,6 @@ html{
     color: #fff;
     cursor: pointer;
     transform: translateX(-50% -50%);   
-    margin-right: 125px;
 }
 
 .progress {
@@ -70,19 +73,16 @@ html{
 }
 
 .progress h3 {
-    margin-bottom: 16px;
+    margin-bottom: 54px;
     color: gray;
     font-weight: 400;
-    margin-left: 100px;
 }
 
 .progress-cards {
     display: flex;
     justify-content: space-between;
-    padding: 24px;
     border-radius: 48px;
-    margin-left: 95px;
-    margin-right: 100px;
+    gap: 15px;
 }
 
 .progress-item {
@@ -121,44 +121,50 @@ html{
 }
 
 .simulado{
-    margin-left: -25px;
-    width: 230px;
+    width: 0 auto;
     height: 70px;
     background-color: #f2f2f2;
     filter: drop-shadow(var(--cor1) -6px 0px 0px);
     box-shadow: #c7c6c6 0px .1px 0px 1px;
     border-radius: 20px;
-    padding-right: 450px;
+    padding-right: 250px;
     padding-bottom: 120px;
 }
 
 .concluido{
-    margin-left: -25px;
-    width: 230px;
+    width: 0 auto;
     height: 70px;
     background-color: #f2f2f2;
     filter: drop-shadow(var(--cor4) -6px 0px 0px);
     box-shadow: #c7c6c6 0px .1px 0px 1px;
     border-radius: 20px;
-    padding-right: 450px;
+    padding-right: 250px;
     padding-bottom: 120px;
 }
 
 .aproveitamento{
-    margin-left: -25px;
-    width: 230px;
+    width: 0 auto;
     height: 70px;
     background-color: #f2f2f2;
     filter: drop-shadow(var(--cor5) -6px 0px 0px);
     box-shadow: #c7c6c6 0px .1px 0px 1px;
     border-radius: 20px;
-    padding-right: 450px;
+    padding-right: 150px;
     padding-bottom: 120px;
 }
 
+.aproveitamento > .dash-tittle{
+    margin-left: -45px;
+}
+
+.aproveitamento > strong{
+    margin-left: -95px;
+}
+
 progress{
-    width: 400px;
-    margin-left: 25px;
+    width: 100% auto;
+    margin-left: 15px;
+
 
     appearance: none;
     -webkit-appearance: none;
